# captcha-rs

./: Cargo.toml  README.md
src/: lib.rs
src/captcha/: standard.rs
