[package]
name = "captcha-rs"
version = "0.2.12"
edition = "2024"
authors = ["Samir Djelal <ssdjelal@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ParkSnoopy/captcha-rs"
license = "MIT"
homepage ="https://github.com/ParkSnoopy/captcha-rs"
documentation = "https://github.com/ParkSnoopy/captcha-rs/blob/main/README.md"
keywords = ["captcha-rs", "captcha"]
description = "Generate verification images dynamically"
exclude = [
    "images/*",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.28"
rand = "0.9.2"
image = "0.25.8"
base64 = "0.22.1"
imageproc= "0.25.0"
ab_glyph = "0.2.32"
